fix: fix style of custom scrollbar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -63,3 +63,9 @@
   align-items: center;
   justify-content: center;
 }
+
+/* fix */
+.os-scrollbar-visible {
+  opacity: 1 !important;
+  visibility: visible !important;
+}
